--- a/package.json
+++ b/package.json
@@ -19,19 +19,33 @@
     "@capacitor/status-bar": "5.0.5",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
+    "@types/axios": "^0.14.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.4.0",
+    "convert": "^4.13.1",
+    "convert-units": "^2.3.4",
+    "firebase": "^10.0.0",
     "ionicons": "^7.0.0",
+    "lodash.support": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.1",
+    "react-i18next": "^13.0.3",
+    "react-intl": "^6.4.4",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "styled-components": "^6.0.3",
+    "swiper": "^10.0.3",
+    "unit.js": "^2.1.1"
   },
   "devDependencies": {
     "@capacitor/cli": "5.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/convert-units": "^2.3.6",
+    "@types/jquery": "^3.5.16",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-legacy": "^4.0.2",
@@ -40,6 +54,7 @@
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^21.1.0",
+    "sass": "^1.63.6",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vitest": "^0.29.2"
